appId: com.idonagler.ShareBuy
--- #tests logging in from the account created in CreateAccountTest
- tapOn: "Email"
- inputText: "${USER_EMAIL}" # Generic user email
- "hideKeyboard"
- tapOn: "Password"
- inputText: "${USER_PASSWORD}" # Generic password
- "hideKeyboard"
- tapOn: "Sign In"
- assertVisible: "Login Failed"
- tapOn: "OK"
- assertVisible: "Welcome to ShareBuy"
