appId: com.idonagler.ShareBuy
---
# Test Purpose:
# test logging in from the account created in CreateAccountTest
#
# Preconditions:
# - The user ${USER_EMAIL} has an account with the password ${USER_PASSWORD}.

- tapOn: "Email"
- inputText: "${USER_EMAIL}" # Generic user email
- "hideKeyboard"
- tapOn: "Password"
- inputText: "${USER_PASSWORD}" # Generic password
- "hideKeyboard"
- tapOn: "Sign In"
- assertVisible:
    id: "toastContentContainer"
- assertVisible: "Search"
