appId: com.idonagler.ShareBuy
--- #tests logging in from the account created in CreateAccountTest
- tapOn: "Email"
- inputText: "${USER_EMAIL}" # Generic user email
- "hideKeyboard"
- tapOn: "Password"
- inputText: "${USER_PASSWORD}" # Generic password
- "hideKeyboard"
- tapOn: "Sign In"
- tapOn: "OK"
- assertVisible: "Want to create a new suggested deal? Create one"
